--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>MonoFocus Planner</title>
+    <title>Focus Planner</title>
     <link rel="icon" type="image/svg+xml" href="/Planer/favicon.svg" />
     <script src="https://cdn.tailwindcss.com"></script>
     <style>
